# fastapi-video

./: main.py  pyproject.toml
static/: teste.html
