[tool.poetry]
name = "fastapi-video"
version = "0.1.0"
description = "Streaming de vídeo com FastAPI"
authors = ["Seu Nome <seuemail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
